e2e/testdata/cluster.yaml
kind: Cluster
apiVersion: kind.x-k8s.io/v1alpha4
name: contour-plus-e2e
nodes:
  - role: control-plane
    image: kindest/node:v1.35.5
  - role: worker
    image: kindest/node:v1.35.5
