e2e/testdata/httpd.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpd
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/name: httpd-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: httpd-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpd-backend
    spec:
      containers:
      - image: ghcr.io/cybozu/testhttpd:0
        name: testhttpd
      restartPolicy: Always
